# tickster

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  pr-review-by-openhands.yml  release-please.yml
doc/: board.md  usage.md
src/: __init__.py  __main__.py  _version.py
src/board/: __init__.py  api_logging.py  cache.py  config.py  discovery.py  gist.py  github_api.py  macros.py  models.py  references.py  rules.py  service.py  state.py  sync.py  yaml_config.py
src/board/cli/: __init__.py  _helpers.py  add_item.py  apply.py  config_cmd.py  delete.py  init.py  list_cmd.py  rename.py  scan.py  status.py  sync.py  sync_config.py  templates.py
src/issue/: __init__.py  config.py  github_api.py  history.py  models.py
src/issue/cli/: __init__.py  list_cmd.py
src/pr/: __init__.py  config.py  github_api.py  history.py  models.py
src/pr/cli/: __init__.py  graph.py  list_cmd.py
src/repo/: __init__.py  config.py
src/repo/cli/: __init__.py  commands.py
src/review/: __init__.py  github_api.py  models.py  status.py
src/review/cli/: __init__.py  list_cmd.py
tests/: __init__.py  conftest.py
tests/board/: __init__.py  conftest.py  test_add_item.py  test_api_logging.py  test_cache.py  test_cli_smoke.py  test_commands_integration.py  test_config.py  test_discovery.py  test_github_api_integration.py  test_models.py  test_references.py  test_rules.py  test_service.py  test_state.py  test_sync.py  test_yaml_config.py
tests/board/fixtures/: __init__.py  add_item_response.json  graphql_search_combined_response.json  graphql_search_issues_response.json  graphql_search_prs_response.json  project_response.json  search_issues_response.json  search_prs_response.json  update_status_response.json  user_response.json
tests/issue/: __init__.py  test_config.py  test_github_api.py  test_history.py  test_models.py
tests/pr/: __init__.py  test_github_api.py  test_graph.py  test_history.py  test_list_cmd.py
tests/repo/: test_config.py
tests/review/: test_cli.py  test_github_api.py  test_status.py
